option to rename your cloud

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>DaneeCloud | Admin</title>
+    <title><%= cloudname %> | Admin</title>
 </head>
 <body>
     <style>
@@ -118,7 +118,7 @@ td, th {
 }
 
     </style>
-    <h1>DaneeCloud</h1>  
+    <h1><%= cloudname %></h1>  
     <h2 class="subtitle">Admin Panel</h2>
     <table>
         <thead>
