--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>DaneeCloud | Log In</title>
+    <title><%= cloudname %> | Log In</title>
 </head>
 <body>
     <style>
@@ -162,7 +162,7 @@ a {
 
 
     </style>
-    <h1>DaneeCloud</h1>
+    <h1><%= cloudname %></h1>
     <% if (messages.error) {%>
     <%= messages.error %>
     <% } %>  
