--- a/views/message.ejs
+++ b/views/message.ejs
@@ -10,7 +10,7 @@
               <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-            <title>DaneeCloud</title>
+            <title<%= cloudname %></title>
         <style>body {
             background-color: #d2d3db;
             padding: 0;
@@ -111,7 +111,7 @@
         
         </head>
         <body>
-            <h1>DaneeCloud</h1>
+            <h1><%= cloudname %></h1>
             <h2>Upload & Download your files!</h2>
             <h3><%- message %> </h3>
             <form action="/">
