--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DaneeCloud | My Files</title>
+    <title><%= cloudname %> | My Files</title>
   </head>
   <body>
     <style>
@@ -116,7 +116,7 @@ td, th {
 }
 
     </style>
-    <h1>DaneeCloud</h1>
+    <h1><%= cloudname %> </h1>
     <h2>My Files</h2>
     <table>
       <thead>
