--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>DaneeCloud | Register</title>
+    <title><%= cloudname %> | Register</title>
 </head>
 <body>
     <style>
@@ -183,7 +183,7 @@ button[id="register"]:hover {
 
 
     </style>
-    <h1>DaneeCloud</h1>
+    <h1><%= cloudname %></h1>
     <h2 class="subtitle">Register</h2>
     <form action="/register" method="post">
         <label for="name"><span class="material-icons">account_circle</span>&nbsp;Username</label>
