--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>DaneeCloud</title>
+    <title><%= cloudname %></title>
 </head>
 <body>
     <style>
@@ -285,7 +285,7 @@ input[type="text"] {
             <button type="submit" class="admin">Admin Panel</button>
         </form> 
         <% } %>
-    <h1>DaneeCloud</h1>
+    <h1><%= cloudname %></h1>
     <h2 class="subtitle">Welcome, <%= username %>!</h2>
     <form action="/upload/" method="post", enctype="multipart/form-data">
         <label for="file"><span class="material-icons">upload_file</span>&nbsp;Choose file to upload</label>
