--- a/views/rename.ejs
+++ b/views/rename.ejs
@@ -10,7 +10,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>DaneeCloud | Rename</title>
+    <title><%= cloudname %> | Rename</title>
 </head>
 <body>
     <style>
@@ -130,7 +130,7 @@ button[id="rename"]:hover {
 
 
     </style>
-    <h1>DaneeCloud</h1>
+    <h1><%= cloudname %></h1>
     <h2 class="subtitle">Rename <%= file %> </h2>
     <% let renameurl =  "/rename/" + file%> 
     <form action=<%= renameurl %> method="post">
