--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -114,13 +114,16 @@ td, th {
   color: #5D3FD3;
   font-family: "Montserrat", sans-serif;
 }
-
+img {
+  width: 200px;
+}
     </style>
     <h1><%= cloudname %> </h1>
     <h2>My Files</h2>
     <table>
       <thead>
       <tr>
+        <th>Preview</th>
         <th>File name</th>
         <th>Size</th>
         <th>Actions</th>
@@ -133,7 +136,13 @@ td, th {
         <% let link2 = "/rename/" + file %>
         <% let link3 = "/download/" + file %> 
         <% let size = fs.statSync(__dirname + config.uploadsfolder + `${req.user.username}/` + file).size / (1024 * 1024) %> 
-          <td><%= file %></td>
+        <% if (isImg(__dirname + config.uploadsfolder + `${req.user.username}/` + file)) { %>
+        <% let imgdir = __dirname + config.uploadsfolder + `${req.user.username}/` + file %> 
+        <td><img src="/uploads/daneeskripter/cat.jpg" width="42" height="42"/></td>
+        <% } else { %>
+          <td>-</td>
+        <% } %>  
+        <td><%= file %></td>
           <% if (size.toFixed(2) > 1024) { %>
             <td><%= size.toFixed(2) / 1000 %> GB </td>
           <% } else { %> 
@@ -144,6 +153,7 @@ td, th {
         <% }) %> 
     </tbody>
     </table>
+    <img src="cat.jpg">
       <form action="/">
         <input type="submit" href="/" value="Back to home page"></input>
         </form>
