--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -126,6 +126,7 @@ img {
       <tr>
         <th>Preview</th>
         <th>File name</th>
+        <th>Is shared?</th>
         <th>Size</th>
         <th>Actions</th>
       </tr>
@@ -138,6 +139,7 @@ img {
         <% let link3 = "/download/" + file %>
         <% let link4 = "/addsf/" + file %> 
         <% let link5 = "/rmsf/" + file %> 
+        <% let isShared; %> 
         <% let size = fs.statSync(__dirname + config.uploadsfolder + `${req.user.username}/` + file).size / (1024 * 1024) %> 
         <% if (isImg(__dirname + config.uploadsfolder + `${req.user.username}/` + file)) { %> 
           <td><img src=<%= "/files/" + req.user.username + "/" + file%> ></td>
@@ -145,11 +147,16 @@ img {
           <td>-</td>
         <% } %>  
         <td><%= file %></td>
+        <% if (sharedFiles.includes(file)) { %>
+          <td>Yes</td>
+        <% } else { %>
+          <td>No</td>
+        <% } %>   
           <% if (size.toFixed(2) > 1024) { %>
             <td><%= size.toFixed(2) / 1000 %> GB </td>
           <% } else { %> 
           <td><%= size.toFixed(2) %> MB </td>
-          <% } %> 
+          <% } %>
           <% if (sharedFiles.includes(file)) { %> 
           <td><a href=<%= link3%>><span class="material-icons">cloud_download</span></a>&nbsp;<a href=<%= link2 %>><span class="material-icons">edit</span></a>&nbsp;<a href=<%= link5 %>><span class="material-icons">stop_screen_share</span></a>&nbsp;<a href=<%= link %>><span class="material-icons">delete</span></a></td>
         <% } else { %>
