--- a/views/editaccount.ejs
+++ b/views/editaccount.ejs
@@ -157,7 +157,7 @@ button[id="rename"]:hover {
         <button type="submit" id="rename"><span class="material-icons">edit</span>&nbsp;Rename account</button>
     </form>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
     
     </footer>
 </body>
