--- a/views/index.ejs
+++ b/views/index.ejs
@@ -373,7 +373,7 @@ function abortHandler(event) {
         <h3 id="status"></h3>
     </form>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
     
     </footer>
 </body>
