--- a/views/login.ejs
+++ b/views/login.ejs
@@ -176,7 +176,7 @@ a {
     </form>
     <a href="/register">Haven't account yet?</a>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
     
     </footer>
 </body>
