--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -170,7 +170,7 @@ img {
         <input type="submit" href="/" value="Back to home page"></input>
         </form>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
     
     </footer>
   </body>
