--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -160,7 +160,7 @@ button[id="verify"]:hover {
     </form>
     <a href="/verifycode">Have a code already?</a>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
     
     </footer>
 </body>
