--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -168,7 +168,7 @@ td, th {
         <input type="submit" href="/" value="Back to home page"></input>
         </form>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
     
     </footer>
 </body>
