--- a/views/message.ejs
+++ b/views/message.ejs
@@ -118,7 +118,7 @@
             <input type="submit" href="/" value="Back to home page"></input>
             </form>
             <footer>
-            <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+            <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
         
         </footer>
         </body>
