--- a/views/register.ejs
+++ b/views/register.ejs
@@ -195,7 +195,7 @@ button[id="register"]:hover {
         <button type="submit" id="register"><span class="material-icons">how_to_reg</span>&nbsp;Register</button>
     </form>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
     
     </footer>
 </body>
