--- a/views/verifycode.ejs
+++ b/views/verifycode.ejs
@@ -134,7 +134,7 @@ button[id="verify"]:hover {
     <button type="submit" id="verify"><span class="material-icons">verified</span>&nbsp;Verify</button>
     </form>
     <footer>
-        <div class="footer">DaneeSkripter © 2022 - All rights reserved</div>
+        <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
     
     </footer>
 </body>
