--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -145,7 +145,11 @@ img {
         <% if (isImg(__dirname + "/.." + config.uploadsfolder + `${req.user.username}/` + file)) { %> 
           <td><img src=<%= "/files/" + req.user.username + "/" + file%> ></td>
         <% } else if (isVid(__dirname + "/.." + config.uploadsfolder + `${req.user.username}/` + file)) { %> 
+          <% if (file.split(".").pop() == "mkv") {%> 
+            <td>Not supported</td>
+          <% } else { %> 
           <td><a href=<%= link6 %> ><span class="material-icons">play_circle</span></a></td>
+          <% } %> 
           <% } else { %>
           <td>-</td>
         <% } %>  
