storagePlans replaced as roles

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -30,21 +30,26 @@
         h2 {
             color: #5D3FD3;
     margin-top: 5px;
-    text-align: center;
+    text-align: left;
     font-family: "Montserrat", sans-serif;
     font-size: x-large;
         
         }
-        h3 {
-            color: #5D3FD3;
-    margin-top: -5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 20px;
-        
-        }
+    .subtitle {
+      text-align: center;
+    }
 
-        input[type="submit"] {
+    .stats {
+      margin-left: 300px;
+    }
+
+    .usr {
+      text-align: right;
+      margin-right: 300px;
+      margin-top: -230px;
+    }
+
+        .back {
         color: white;
     height: 60px;
     width: 250px;
@@ -63,7 +68,7 @@
     border:0cm
     }
     
-    input[type="submit"]:hover {
+    .back:hover {
         color: #5D3FD3;
     height: 60px;
     width: 250px;
@@ -82,8 +87,9 @@
     border:0cm
     }
         .footer {
-    position: fixed;
-    padding: 10px 10px 0px 10px;
+    position: relative;
+    padding: 10px 0px 0px 0px;
+    margin-top: 10px;
     bottom: 0;
     width: 100%;
     /* Height of the footer*/
@@ -103,9 +109,18 @@ a {
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  margin-left: auto;
-    margin-right: auto;
+  margin-left: 100px;
     margin-top: 20px;
+}
+
+.usrtable {
+    margin-left: auto;
+    margin-right: 100px;
+}
+
+.statstable {
+    margin-right: auto;
+    margin-left: 235px;
 }
 
 td, th {
@@ -117,11 +132,77 @@ td, th {
   font-family: "Montserrat", sans-serif;
 }
 
+.storageplantext {
+    color: #5D3FD3;
+    margin-top: 10px;
+    text-align: right;
+    margin-left: auto;
+    margin-right: 225px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
+
+}
+
+.storageplans {
+  text-align: right;
+  margin-right: 335px;
+  margin-top: 100px;
+}
+
+select {
+  background-color: #5D3FD3;
+  color: white;
+  border-radius: 24px;
+  height: 60px;
+  width: 250px;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  font-size: 20px;
+  margin-left: auto;
+  margin-right: 300px;
+  display: flex;
+}
+
+.setasdefault {
+  color: white;
+    height: 60px;
+    width: 250px;
+    background-color: #5D3FD3;
+    font-size: 20px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 300px;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 24px;
+    transition-duration: 0.4s;
+    border:0cm
+}
+
+.setasdefault:hover {
+  color: #5D3FD3;
+    height: 60px;
+    width: 250px;
+    background-color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: 300px;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
+    border-radius: 24px;
+    transition-duration: 0.4s;
+    border:0cm
+}
     </style>
     <h1><%= cloudname %></h1>
     <h2 class="subtitle">Admin Panel</h2>
-    <h2>Stats</h2>
-    <table>
+    <h2 class="stats">Stats</h2>
+    <table class="statstable">
       <thead>
         <th>Name</th>
         <th>Value</th>
@@ -149,14 +230,14 @@ td, th {
         </tr>
       </tbody>
     </table>
-    <h2>User management</h2>
-    <table>
+    <h2 class="usr">User management</h2>
+    <table class="usrtable">
         <thead>
         <tr>
           <th>Account username</th>
           <th>Account email</th>
           <th>Is verified?</th>
-          <th>Is admin?</th>
+          <th>Role</th>
           <th>Actions</th>
         </tr>
       </thead>
@@ -167,13 +248,7 @@ td, th {
           <% let link2 = "/addadmin/" + user.username %>
           <% let link3 = "/removeadmin/" + user.username %> 
           <% let link4 = "/editaccount/" + user.username %> 
-          <% let isadmin; %> 
-          <% let isverified; %> 
-          <% if (user.isAdmin) { %>
-            <% isadmin = "Yes" %>
-          <% } else { %>
-            <% isadmin = "No" %>
-            <% } %>    
+          <% let isverified; %>    
           <% if (user.isVerified) { %>
             <% isverified = "Yes" %>
           <% } else { %>  
@@ -183,8 +258,8 @@ td, th {
             <td><%= user.username %></td>
             <td><%= user.email %> </td>
             <td><%= isverified %> </td>
-            <td><%= isadmin %> </td>
-            <% if (isadmin == "No") { %> 
+            <td><%= user.role %> </td>
+            <% if (user.role !== "admin") { %> 
             <td><a href=<%= link2 %>><span class="material-icons">arrow_upward</span></a>&nbsp;<a href=<%= link4 %>><span class="material-icons">edit</span></a>&nbsp;<a href=<%= link %>><span class="material-icons">delete</span></a></td>
             <% } else {%> 
                 <td><a href=<%= link3 %>><span class="material-icons">arrow_downward</span></a>&nbsp;<a href=<%= link4 %>><span class="material-icons">edit</span></a>&nbsp;<a href=<%= link %>><span class="material-icons">delete</span></a></td>
@@ -194,8 +269,23 @@ td, th {
       </tr>
       </tbody>
       </table>
+      <h2 class="storageplans">Storage Plans</h2>
+      <p class="storageplantext">Choose to storage plan for each role.</label>
+      <form action="/setstorageplan">
+        <select name="storageplan">
+          <% for (let plan of plans) { %>        
+          <option value=<%= plan.name %>><%= plan.name %> | <%= plan.maxStorage %> MB</option>
+          <% } %>
+        </select>
+        <select name="roles">
+          <% for (let role of roles) { %>
+            <option value=<%= role.name %>><%= role.name %></option>
+          <% } %>
+        </select>
+        <input type="submit" class="setasdefault" value="Set"></input>
+      </form> 
       <form action="/">
-        <input type="submit" href="/" value="Back to home page"></input>
+        <input type="submit" class="back" href="/" value="Back to home page"></input>
         </form>
     <footer>
         <div class="footer">DaneeSkripter © 2022 - 2023 All rights reserved</div>
